foolish/foolish-core/src/snapshots/foolish_core__approval_tests__nestedArithmeticIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 bN+JjkAe7vww/v96WLo8FGG1ZUdRyZ4hNQ+DBqLilsMoxL5RotiqgfXRyYx6AVILbzb3Yr4sxZcvpQqciH6TBg==
INPUT: {((2 + 3) * (4 - 1)) / 5;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(/) [EMBRYONIC]
    Operator(*) [EMBRYONIC]
      Operator(+) [EMBRYONIC]
        Int(2) [INDEPENDENT]
        Int(3) [INDEPENDENT]
      Operator(-) [EMBRYONIC]
        Int(4) [INDEPENDENT]
        Int(1) [INDEPENDENT]
    Int(5) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(3) [CONSTANT]
