foolish/foolish-core/src/snapshots/foolish_core__approval_tests__nestedBranesIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  Int(5) [INDEPENDENT]
  Brane [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(15) [INDEPENDENT]
  Int(20) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(5) [INDEPENDENT]
  Brane [CONSTANT]
    Int(10) [INDEPENDENT]
    Int(15) [INDEPENDENT]
  Int(20) [INDEPENDENT]
