foolish/foolish-core/src/snapshots/foolish_core__approval_tests__nestedBranesWithArithmeticIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 cFBhonDqg+tZUB9Jzv0eaqRNE3IsXuFXvtW0xiBtRuaf0fNNVrwB6Y51kwJZKx3vGmmsYZRBwHrhHcwSWhqhDg==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  Operator(+) [EMBRYONIC]
    Int(2) [INDEPENDENT]
    Int(3) [INDEPENDENT]
  Brane [EMBRYONIC]
    Operator(*) [EMBRYONIC]
      Int(4) [INDEPENDENT]
      Int(5) [INDEPENDENT]
    Brane [EMBRYONIC]
      Operator(-) [EMBRYONIC]
        Int(6) [INDEPENDENT]
        Int(1) [INDEPENDENT]
    Operator(+) [EMBRYONIC]
      Int(7) [INDEPENDENT]
      Int(8) [INDEPENDENT]
  Operator(/) [EMBRYONIC]
    Int(9) [INDEPENDENT]
    Int(3) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(5) [CONSTANT]
  Brane [CONSTANT]
    Int(20) [CONSTANT]
    Brane [CONSTANT]
      Int(5) [CONSTANT]
    Int(15) [CONSTANT]
  Int(3) [CONSTANT]
