foolish/foolish-core/src/snapshots/foolish_core__approval_tests__nestedScopeIdentifierIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(100) [INDEPENDENT]
  outer'Brane [EMBRYONIC]
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(100) [INDEPENDENT]
  outer'Brane [CONSTANT]
    Int(100) [INDEPENDENT]
