foolish/foolish-core/src/snapshots/foolish_core__approval_tests__nestedScopeShadowingIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(100) [INDEPENDENT]
  inner'Brane [EMBRYONIC]
    x = 
    Int(200) [INDEPENDENT]
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(100) [INDEPENDENT]
  inner'Brane [CONSTANT]
    x = 
    Int(200) [INDEPENDENT]
    Int(200) [INDEPENDENT]
  Int(100) [INDEPENDENT]
