foolish/foolish-core/src/snapshots/foolish_core__approval_tests__nested_branes.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 XNRGEJmNFB0S4lcgUaND6ODJMYupNAMCiJ9J3hggC0PWuABZREvgvvl/Lurg4ao8G8TGGihDEjdCbCl19HoZDg==
INPUT: {5; {10; 15}; 20;}
[0] PARSED:
Brane [EMBRYONIC]
  Int(5) [INDEPENDENT]
  Brane [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(15) [INDEPENDENT]
  Int(20) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(5) [INDEPENDENT]
  Brane [CONSTANT]
    Int(10) [INDEPENDENT]
    Int(15) [INDEPENDENT]
  Int(20) [INDEPENDENT]
