foolish/foolish-core/src/snapshots/foolish_core__approval_tests__nested_search_in_brane.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 99H5izukgUwrkYHoLoMO3U+v5R2NAmf6tLMbWOAhaLXMHKotn3GgEFRhX2ea6hy0TPBHqSPnQNwrDmC6IJAdAg==
INPUT: {x = 42; b = {y = x + 1};}
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(42) [INDEPENDENT]
  b = 
  Brane [EMBRYONIC]
    y = 
    Operator(+) [EMBRYONIC]
      Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
      Int(1) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  x = 
  Int(42) [INDEPENDENT]
  b = 
  Brane [CONSTANT]
    y = 
    Int(43) [CONSTANT]
