foolish/foolish-core/src/snapshots/foolish_core__approval_tests__offsetAccess.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  data = 
  Brane [EMBRYONIC]
    a = 
    Int(10) [INDEPENDENT]
    b = 
    Int(20) [INDEPENDENT]
    c = 
    Int(30) [INDEPENDENT]
    d = 
    Int(40) [INDEPENDENT]
    e = 
    Int(50) [INDEPENDENT]
  first = 
  Index(offset=0, ANCHORED) [EMBRYONIC]
  second = 
  Index(offset=1, ANCHORED) [EMBRYONIC]
  last = 
  Index(offset=-1, ANCHORED) [EMBRYONIC]
  secondˍlast = 
  Index(offset=-2, ANCHORED) [EMBRYONIC]
  oobˍpos = 
  Index(offset=5, ANCHORED) [EMBRYONIC]
  oobˍneg = 
  Index(offset=-6, ANCHORED) [EMBRYONIC]
  empty = 
  Index(offset=0, ANCHORED) [EMBRYONIC]
RESULT:
Brane [NK]
  data = 
  Brane [CONSTANT]
    a = 
    Int(10) [INDEPENDENT]
    b = 
    Int(20) [INDEPENDENT]
    c = 
    Int(30) [INDEPENDENT]
    d = 
    Int(40) [INDEPENDENT]
    e = 
    Int(50) [INDEPENDENT]
  first = 
  Int(10) [INDEPENDENT]
  second = 
  Int(20) [INDEPENDENT]
  last = 
  Int(50) [INDEPENDENT]
  secondˍlast = 
  Int(40) [INDEPENDENT]
  oobˍpos = 
  Index(offset=5, ANCHORED) [NK]
  oobˍneg = 
  Int(10) [INDEPENDENT]
  empty = 
  Index(offset=0, ANCHORED) [NK]
